--- a/app/views/advert/ilanguncelle.html.erb
+++ b/app/views/advert/ilanguncelle.html.erb
@@ -157,29 +157,33 @@
 
 				<div class="col-lg-6">
 
-					<h2 class="row" style="text-align:center;"> İlan Ver</h2>
+					<h2 class="row" style="text-align:center;"> İlan Güncelle</h2>
 					<br>
 
 					<div class="row form-group">
 						<label class="col-sm-2"> İlan Kategorisi </label>
 						<div class="col-sm-10">
-							<select class="form-control" onChange="changeform(this.value)"
+							<select disabled class="form-control"
 							name="dropdown">
-								<option selected value="ikinciel">İkinci El İlan</option>
-								<option value="evarkadasi">Ev Arkadaşı</option>
-								<option value="dersnotlari">Ders Notları</option>
-								<option value="ozelders">Özel Ders</option>
+								<option <%= 'selected' if @advert.advertable_type=='Secondhand'%> value="ikinciel">İkinci El İlan</option>
+								<option <%= 'selected' if @advert.advertable_type=='Homemate'%> value="evarkadasi">Ev Arkadaşı</option>
+								<option <%= 'selected' if @advert.advertable_type=='Lessonnote'%> value="dersnotlari">Ders Notları</option>
+								<option <%= 'selected' if @advert.advertable_type=='PrivateLesson'%> value="ozelders">Özel Ders</option>
 							</select>
 						</div>
 					</div>
+					
+					<% if @advert.advertable_type=='Secondhand' %>
 
-					<%= form_for @advert, :url => 'secondhand' , :method => :post , :html => {
+					<%= form_for @advert, :url => '/ilanguncelle/secondhand' , :method => :post , :html => {
 					:class => 'form-basic ikinciel' , :id => 'ikincielform',
 					:multipart => true,
 					:onsubmit => 'return ikincielsubmit();',
 					} do |t| %>
 
 					<%= t.fields_for @advert.advertable do |field| %>
+					
+					<%= t.hidden_field :id %>
 
 					<div class="row form-group">
 						<label class="control-label col-sm-2"> Alt Kategori</label>
@@ -296,22 +300,15 @@
 
 					<% end %>
 
-					<div class = "row form-group">
-						<div class = "col-sm-offset-2 col-sm-10">
-							<div class = "checkbox">
-								<label>
-									<input type = "checkbox" id="kullanim" value="true">
-									Kullanım koşullarını kabul ediyorum</label>
-							</div>
-						</div>
-					</div>
+					
 
 					<div class = "row form-group">
 						<div class = "col-sm-offset-2 col-sm-10">
-							<%= t.submit 'İlan Ver',class:"btn btn-default" %>
+							<%= t.submit 'İlanı Güncelle',class:"btn btn-default" %>
 						</div>
 					</div>
 
+					<% end %>
 					<% end %>
 					<% end %>
 
@@ -350,7 +347,7 @@
 
 						function ikincielmarkaVerify() {
 							var form = document.getElementById("ikincielform");
-							var brand = form.elements['advert_advertable_brand'].value;
+							var brand = form.elements['advert_secondhand_brand'].value;
 							var result = false;
 
 							if (!/\S/.test(brand)) {
@@ -376,19 +373,6 @@
 							return result;
 						}
 
-						function ikincielresimVerify() {
-							var form = document.getElementById("ikincielform");
-							var image = form.elements['images_'];
-							var result = false;
-
-							if (image.length == undefined) {
-								$('.ikincielImageAlert').show();
-							} else {
-								$('.ikincielImageAlert').hide();
-								result = true;
-							}
-							return result;
-						}
 
 						function ikincielsubmit() {
 
@@ -398,12 +382,14 @@
 							var aciklama = ikincielaciklamaVerify();
 							var resim = ikincielresimVerify();
 
-							var kullanim = $("#ikincielform #kullanim").is(":checked");
+						
 
-							return ilanadi && fiyat && marka && aciklama && resim && kullanim;
+							return ilanadi && fiyat && marka && aciklama;
 
 						}
 					</script>
+					
+					<% if @advert.advertable_type=='Lessonnote' %>
 
 					<%= form_for @advert, :url => 'lecturenote' , :method => :post , :html => {
 					:class => 'form-basic ikinciel' , :id => 'dersnotuform',
@@ -457,7 +443,9 @@
 					</div>
 					<% end %>
 					<% end %>
+					<% end %>
 
+					<% if @advert.advertable_type=='Homemate' %>
 					<%= form_for @advert, :url => 'homemate' , :method => :post , :html => {
 					:class => 'form-basic ikinciel' , :id => 'evarkadasiform',
 					:style => 'display:none;'
@@ -510,7 +498,9 @@
 					</div>
 					<% end %>
 					<% end %>
+					<% end %>
 
+					<% if @advert.advertable_type=='Privatelesson' %>
 					<%= form_for @advert, :url => 'privatelesson' , :method => :post , :html => {
 					:class => 'form-basic ikinciel' , :id => 'ozeldersform',
 					:style => 'display:none;'
@@ -563,6 +553,7 @@
 					</div>
 					<% end %>
 					<% end %>
+					<% end %>
 
 				</div>
 
@@ -590,43 +581,43 @@
 		<!-- Resim Silme-->
 		<script>
 			function resimsil(k,l) {
-				$.ajax({
-					
-					url: '/deleteimage',
-					data: {
-						authenticity_token : window._token,
-						advert : k,
-						image : l
+				
+				if (confirm("Silmek istediğinize emin misiniz?") == true) {
+			        
+			    
+					$.ajax({
 						
-						
-					},
-					
-					error : function () {
-						alert('error');
-						
-					},
-					
-					dataType: 'json',
-					success: function(data) {
-						
-						if (data.check) {
-							$(".image-"+l).hide();
+						url: '/deleteimage',
+						data: {
+							authenticity_token : window._token,
+							advert : k,
+							image : l
 							
 							
-						}
+						},
 						
+						error : function () {
+							alert('error');
+							
+						},
 						
-					},
-					type : 'POST'
-					
-		
-					
+						dataType: 'json',
+						success: function(data) {
+							
+							if (data.check) {
+								$(".image-"+l).hide();
+								
+								
+							}
+							
+							
+						},
+						type : 'POST'
+						
+			
+						
+					});
 				}
-					
-					
-					
-					
-				)
 				
 				
 			}
@@ -634,23 +625,6 @@
 			
 		</script>
 
-		<script>
-			function changeform(value) {
-				if (value == "ikinciel") {
-					$(".form-basic").hide();
-					$("#ikincielform").show();
-				} else if (value == "evarkadasi") {
-					$(".form-basic").hide();
-					$("#evarkadasiform").show();
-				} else if (value == "dersnotlari") {
-					$(".form-basic").hide();
-					$("#dersnotuform").show();
-				} else if (value == "ozelders") {
-					$(".form-basic").hide();
-					$("#ozeldersform").show();
-				}
-			}
-		</script>
 
 		<script>
 imageupload(".file_image").filer({
