--- a/app/views/advert/ilanver.html.erb
+++ b/app/views/advert/ilanver.html.erb
@@ -466,7 +466,7 @@
 					</div>
 
 					<div class = "row form-group">
-						<label class = "col-sm-2 control-label">Fiyat</label>
+						<label class = "col-sm-2 control-label">Aylık Kira</label>
 
 						<div class = "col-sm-10">
 							<%= t.text_field :price, class:"form-control" %>
