--- a/app/views/advert/kategoriler.html.erb
+++ b/app/views/advert/kategoriler.html.erb
@@ -456,7 +456,7 @@
 										<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
 											<div class="thumbnail">
-												<a href="/ikinciel/<%= advert.name.parameterize + '-' + advert.id.to_s %>"> 
+												<a href="<%= advert.href %>"> 
 													<% if advert.images == [] %>
 														<%= image_tag Image.new.imagefile %> 
 													<% else %>
