--- a/app/views/application/_kullanicipaneli2.html.erb
+++ b/app/views/application/_kullanicipaneli2.html.erb
@@ -5,7 +5,7 @@
 
 <!--  sadece xsmall larda gözükecek -->
 
-					<div style="padding-left: 70px; margin-top: 50px;"
+					<div style="padding-left: 50px; margin-top: 50px;"
 					class="row visible-xs">
 
 						<div class="row">
@@ -21,7 +21,7 @@
 
 							<button style="margin-left: 10px;" type="button"
 							class="col-xs-3 col-sm-2 btn btn-info">
-								<span style="">Satışlarım</span>
+								<span style="font-size:11px;">Satışlarım</span>
 							</button>
 
 						</div>
@@ -34,12 +34,12 @@
 
 							<button style="margin-left: 10px;" type="button"
 							class="col-xs-3 col-sm-2 btn btn-success">
-								<span style="">Favorilerim</span>
+								<span style="font-size:10px;">Favorilerim</span>
 							</button>
 
 							<button style="margin-left: 10px;" type="button"
 							class="col-xs-3 col-sm-2 btn btn-warning">
-								<span style="">Mesajlarım</span>
+								<span style="font-size:10px;">Mesajlarım</span>
 							</button>
 
 						</div>
@@ -47,17 +47,17 @@
 						<div style="margin-top: 10px;" class="row">
 
 							<button type="button" class="col-xs-3 col-sm-2 btn btn-primary">
-								<span style="">Tekliflerim</span>
+								<span style="font-size:12px;">Tekliflerim</span>
 							</button>
 
 							<button style="margin-left: 10px;" type="button"
 							class="col-xs-3 col-sm-2 btn btn-danger">
-								<span style="font-size:9.5px;">İncelediklerim</span>
+								<span style="font-size:9px;">İncelediklerim</span>
 							</button>
 
 							<button style="margin-left: 10px;" type="button"
 							class="col-xs-3 col-sm-2 btn btn-info">
-								<span style="font-size:9.5px;">Hesap Ayarları</span>
+								<span >Ayarlar</span>
 							</button>
 
 						</div>
@@ -70,7 +70,7 @@
 							</button>
 
 							<button style="margin-left:10px;" type="button" class="col-xs-3 col-sm-2 btn btn-primary">
-								<span style=" ">Kategoriler</span>
+								<span style="font-size:10px;">Kategoriler</span>
 							</button>
 						</div>
 
