--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -744,20 +744,20 @@
 					<% if current_user!=nil %>
 					<div style=" margin-top:40px;"  class="hidden-md hidden-sm row">
 
-						<a href="/uye/<%= current_user.username%>">
-						<button href="/uye" style="margin-left:15px;margin-right:5px;"   type="button" class="col-xs-3 btn btn-md btn-info">
+						
+						<a href="/uye/<%= current_user.username%>" style="margin-left:15px;margin-right:5px;"   type="button" class="col-xs-3 btn btn-md btn-info">
 							<span style="font-size:10px;">Üye Bilgileri</span>
-						</button></a>
+						</a>
 
-						<a href="/kategoriler">
-						<button href="/kategoriler" style="margin-right:5px;" type="button" class="col-xs-3  btn btn-md btn-info">
+						
+						<a href="/kategoriler" style="margin-right:5px;" type="button" class="col-xs-3  btn btn-md btn-info">
 							<span style="font-size:10px;">Kategoriler</span>
-						</button></a>
+						</a>
 
-						<a href="/firsatlar">
-						<button type="button" class="col-xs-4  btn btn-md btn-danger">
+						
+						<a href="/firsatlar" type="button" class="col-xs-4  btn btn-md btn-danger">
 							<span style="font-size:12px;">Fırsatlar</span>
-						</button></a>
+						</a>
 
 					</div>
 
@@ -765,13 +765,13 @@
 
 					<div style=" margin-top:40px;"  class="hidden-md hidden-sm row">
 
-						<button href="/kategoriler" style="margin-left:40px;margin-right:20px;" type="button" class="col-xs-4  btn btn-lg btn-info">
+						<a href="/kategoriler" style="margin-left:40px;margin-right:20px;" type="button" class="col-xs-4  btn btn-lg btn-info">
 							<span style="font-size:12px;">Kategoriler</span>
-						</button>
+						</a>
 
-						<button   type="button" class="col-xs-4  btn btn-lg btn-danger">
-							<a href="/firsatlar" style="font-size:12px;">Fırsatlar</a>
-						</button>
+						<a  href="/firsatlar" type="button" class="col-xs-4  btn btn-lg btn-danger">
+							<span style="font-size:12px;">Fırsatlar</span>
+						</a>
 
 					</div>
 
