--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1187,7 +1187,7 @@
 						<div class="jcarousel">
 							<ul>
 
-								<<% @mostpopular.each do |advert| %>
+								<% @mostpopular.each do |advert| %>
 
 								<% if advert.advertable_type=='Secondhand' %>
 								<% path = '/ikinciel/' %>
