--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>asdCampus İlan</title>
+		<title>Campus İlan</title>
 		<%= csrf_meta_tags %>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
