--- a/app/views/advert/firsatlar.html.erb
+++ b/app/views/advert/firsatlar.html.erb
@@ -174,7 +174,7 @@
 							<button onclick="window.location='/firsatlar?acililanlar=1'"  type="button" class="btn btn-nav">
 								<span class="glyphicon glyphicon-folder-close"></span>
 								<p>
-									<a>Acil İlanlar </a>
+									Acil İlanlar
 								</p>
 							</button>
 						</div>
