--- a/app/views/advert/ilanver.html.erb
+++ b/app/views/advert/ilanver.html.erb
@@ -185,9 +185,9 @@
 						<label class="control-label col-sm-2"> Alt Kategori</label>
 
 						<div class="col-sm-10">
-							<%= field.select :category, [['Beyaz Eşya', 'beyazesya'], ['Ev Dekorasyon',
+							<%= field.select :category, [['Beyaz Eşya', 'beyazesya'], ['Ev Dekorasyonu',
                   'evdekorasyon'], ['Müzik Aletleri', 'muzikaletleri'], ['Elektronik', 'elektronik'], ['Kırtasiye', 'kirtasiye'],
-                ['Mutfak Eşyaları', 'mutfakesyalari'], ['Vasıta', 'vasita'], ['Diğer', 'diger']],{}, {:class => " form-control"}  %>
+                ['Mutfak Eşyaları', 'mutfakesyalari'], ['Vasıta', 'vasita'],['Giyim', 'giyim'],['Ders Notu', 'dersnotu'], ['Diğer', 'diger']],{}, {:class => " form-control"}  %>
 
 						</div>
 					</div>
