--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -202,6 +202,14 @@
 							<div class="panel-body">
 								<a style="margin-left:10px;" href="/kategoriler/ikincielilan/vasita">-Vasıta </a>
 							</div>
+							
+							<div class="panel-body">
+								<a style="margin-left:10px;" href="/kategoriler/ikincielilan/giyim">-Giyim </a>
+							</div>
+							
+							<div class="panel-body">
+								<a style="margin-left:10px;" href="/kategoriler/ikincielilan/dersnotu">-Ders Notu </a>
+							</div>
 
 							<div class="panel-body">
 								<a style="margin-left:10px;" href="/kategoriler/ikincielilan/diger">-Diğer </a>
