--- a/app/views/index/mesajlarim.html.erb
+++ b/app/views/index/mesajlarim.html.erb
@@ -51,8 +51,7 @@
 
 		<link rel="stylesheet" href="resources/plugins/cssmenu-3/styles.css">
 		<script src="resources/plugins/cssmenu-3/script.js"></script>
-		
-		
+
 		<!-- Arama Kutucuğu-->
 
 		<link href="/resources/css/searchbox.css" rel="stylesheet"
@@ -91,11 +90,9 @@
 		<!-- end of plugins  -->
 
 		<style>
-		
-		body {
-			background-color:#F0F7F7;
-			
-		}
+			body {
+				background-color: #F0F7F7;
+			}
 			@media screen and (min-width: 1200px) {
 				body {
 					padding-left: 50px;
@@ -143,15 +140,12 @@
 				<%= render "headerfixed" %>
 
 			</div>
-			
-			
+
 			<div class="row">
 
 				<%= render "smartmenus" %>
 
 			</div>
-
-			
 
 			<div class="row hidden-xs hidden-sm" style="height: 60%; padding-bottom: 20px; margin-bottom: 30px; margin-top: 30px;">
 
@@ -189,9 +183,34 @@
 					<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9"
 					style="padding-left: 20px; padding-right: 20px">
 
+						
+						
+						
+						
+						<div class="row">
+							
+							
+						
+
 						<div class="col-md-12">
-							<h4>Mesajlarım</h4>
-							<div class="table-responsive">
+							
+							<div class="row">
+							<h4 class="col-md-3">Mesajlarım</h4>
+							
+							<a style="float:right;margin-bottom:20px;" type = "button" data-title="Edit"
+												data-toggle="modal" data-target="#mesajgonder" class = "btn btn-danger">Mesaj Gönder</a>
+							
+							
+											
+											
+							
+							</div>
+							
+							
+							
+							<div class="row table-responsive">
+							
+							
 
 								<table id="mytable" class="table table-bordred table-striped">
 
@@ -202,51 +221,26 @@
 										</th>
 										<th>Ad</th>
 										<th>Soyad</th>
-										<th>Adres</th>
-										<th>E-posta</th>
-										<th>Telefon</th>
-										<th>Düzenle</th>
-
+										<th>Konu</th>
+										<th>Kullanıcı Adı</th>
+										<th>Tarih</th>
+										<th>Cevapla</th>
 										<th>Sil</th>
+
 									</thead>
 									<tbody>
 
 										<tr>
-											<td>
-											<input type="checkbox" class="checkthis" />
-											</td>
-											<td>Mohsin</td>
-											<td>Irshad</td>
-											<td>CB 106/107 Street # 11 Wah Cantt Islamabad Pakistan</td>
-											<td>isometric.mohsin@gmail.com</td>
-											<td>+923335586757</td>
-											<td>
-											<p data-placement="top" data-toggle="tooltip"
-											title="Edit">
-												<button class="btn btn-primary btn-xs" data-title="Edit"
-												data-toggle="modal" data-target="#edit">
-													<span class="glyphicon glyphicon-pencil"></span>
-												</button>
-											</p></td>
-											<td>
-											<p data-placement="top" data-toggle="tooltip"
-											title="Delete">
-												<button class="btn btn-danger btn-xs" data-title="Delete"
-												data-toggle="modal" data-target="#delete">
-													<span class="glyphicon glyphicon-trash"></span>
-												</button>
-											</p></td>
-										</tr>
+											<% current_user.tos.each do |mesaj| %>
 
-										<tr>
 											<td>
 											<input type="checkbox" class="checkthis" />
 											</td>
-											<td>Mohsin</td>
-											<td>Irshad</td>
-											<td>CB 106/107 Street # 11 Wah Cantt Islamabad Pakistan</td>
-											<td>isometric.mohsin@gmail.com</td>
-											<td>+923335586757</td>
+											<td><%= mesaj.from.name %></td>
+											<td><%= mesaj.from.surname %></td>
+											<td><%= mesaj.topic %></td>
+											<td><%= mesaj.from.username %></td>
+											<td><%= mesaj.created_at %></td>
 											<td>
 											<p data-placement="top" data-toggle="tooltip"
 											title="Edit">
@@ -255,6 +249,8 @@
 													<span class="glyphicon glyphicon-pencil"></span>
 												</button>
 											</p></td>
+											
+											
 											<td>
 											<p data-placement="top" data-toggle="tooltip"
 											title="Delete">
@@ -263,87 +259,8 @@
 													<span class="glyphicon glyphicon-trash"></span>
 												</button>
 											</p></td>
-										</tr>
 
-										<tr>
-											<td>
-											<input type="checkbox" class="checkthis" />
-											</td>
-											<td>Mohsin</td>
-											<td>Irshad</td>
-											<td>CB 106/107 Street # 11 Wah Cantt Islamabad Pakistan</td>
-											<td>isometric.mohsin@gmail.com</td>
-											<td>+923335586757</td>
-											<td>
-											<p data-placement="top" data-toggle="tooltip"
-											title="Edit">
-												<button class="btn btn-primary btn-xs" data-title="Edit"
-												data-toggle="modal" data-target="#edit">
-													<span class="glyphicon glyphicon-pencil"></span>
-												</button>
-											</p></td>
-											<td>
-											<p data-placement="top" data-toggle="tooltip"
-											title="Delete">
-												<button class="btn btn-danger btn-xs" data-title="Delete"
-												data-toggle="modal" data-target="#delete">
-													<span class="glyphicon glyphicon-trash"></span>
-												</button>
-											</p></td>
-										</tr>
-
-										<tr>
-											<td>
-											<input type="checkbox" class="checkthis" />
-											</td>
-											<td>Mohsin</td>
-											<td>Irshad</td>
-											<td>CB 106/107 Street # 11 Wah Cantt Islamabad Pakistan</td>
-											<td>isometric.mohsin@gmail.com</td>
-											<td>+923335586757</td>
-											<td>
-											<p data-placement="top" data-toggle="tooltip"
-											title="Edit">
-												<button class="btn btn-primary btn-xs" data-title="Edit"
-												data-toggle="modal" data-target="#edit">
-													<span class="glyphicon glyphicon-pencil"></span>
-												</button>
-											</p></td>
-											<td>
-											<p data-placement="top" data-toggle="tooltip"
-											title="Delete">
-												<button class="btn btn-danger btn-xs" data-title="Delete"
-												data-toggle="modal" data-target="#delete">
-													<span class="glyphicon glyphicon-trash"></span>
-												</button>
-											</p></td>
-										</tr>
-
-										<tr>
-											<td>
-											<input type="checkbox" class="checkthis" />
-											</td>
-											<td>Mohsin</td>
-											<td>Irshad</td>
-											<td>CB 106/107 Street # 11 Wah Cantt Islamabad Pakistan</td>
-											<td>isometric.mohsin@gmail.com</td>
-											<td>+923335586757</td>
-											<td>
-											<p data-placement="top" data-toggle="tooltip"
-											title="Edit">
-												<button class="btn btn-primary btn-xs" data-title="Edit"
-												data-toggle="modal" data-target="#edit">
-													<span class="glyphicon glyphicon-pencil"></span>
-												</button>
-											</p></td>
-											<td>
-											<p data-placement="top" data-toggle="tooltip"
-											title="Delete">
-												<button class="btn btn-danger btn-xs" data-title="Delete"
-												data-toggle="modal" data-target="#delete">
-													<span class="glyphicon glyphicon-trash"></span>
-												</button>
-											</p></td>
+											<% end %>
 										</tr>
 
 									</tbody>
@@ -380,6 +297,8 @@
 							</div>
 
 						</div>
+						
+						</div>
 
 						<div class="modal fade" id="edit" tabindex="-1" role="dialog"
 						aria-labelledby="edit" aria-hidden="true">
@@ -390,20 +309,20 @@
 										aria-hidden="true">
 											<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 										</button>
-										<h4 class="modal-title custom_align" id="Heading">Edit
-										Your Detail</h4>
+										<h4 class="modal-title custom_align" id="Heading">Mesajı Cevapla</h4>
 									</div>
 									<div class="modal-body">
 										<div class="form-group">
-											<input class="form-control " type="text" placeholder="Mohsin">
+											<input class="form-control " type="text" placeholder="Kullanıcı Adı">
 										</div>
 										<div class="form-group">
 
-											<input class="form-control " type="text" placeholder="Irshad">
+											<input class="form-control " type="text" placeholder="Konu">
 										</div>
 										<div class="form-group">
 											<textarea rows="2" class="form-control"
-											placeholder="CB 106/107 Street # 11 Wah Cantt Islamabad Pakistan"></textarea>											
+											placeholder="Mesaj İçeriği"></textarea>																						
+
 
 
 
@@ -412,7 +331,47 @@
 									<div class="modal-footer ">
 										<button type="button" class="btn btn-warning btn-lg"
 										style="width: 100%;">
-											<span class="glyphicon glyphicon-ok-sign"></span> Update
+											<span class="glyphicon glyphicon-ok-sign"></span> Cevap Ver
+										</button>
+									</div>
+								</div>
+								<!-- /.modal-content -->
+							</div>
+							<!-- /.modal-dialog -->
+						</div>
+						
+						<div class="modal fade" id="mesajgonder" tabindex="-1" role="dialog"
+						aria-labelledby="edit" aria-hidden="true">
+							<div class="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<button type="button" class="close" data-dismiss="modal"
+										aria-hidden="true">
+											<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+										</button>
+										<h4 class="modal-title custom_align" id="Heading">Mesaj Gönder</h4>
+									</div>
+									<div class="modal-body">
+										<div class="form-group">
+											<input class="form-control " type="text" placeholder="Kullanıcı Adı">
+										</div>
+										<div class="form-group">
+
+											<input class="form-control " type="text" placeholder="Konu">
+										</div>
+										<div class="form-group">
+											<textarea rows="2" class="form-control"
+											placeholder="Mesaj İçeriği..."></textarea>																						
+
+
+
+
+										</div>
+									</div>
+									<div class="modal-footer ">
+										<button type="button" class="btn btn-warning btn-lg"
+										style="width: 100%;">
+											<span class="glyphicon glyphicon-ok-sign"></span> Gönder
 										</button>
 									</div>
 								</div>
@@ -430,24 +389,22 @@
 										aria-hidden="true">
 											<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 										</button>
-										<h4 class="modal-title custom_align" id="Heading">Delete
-										this entry</h4>
+										<h4 class="modal-title custom_align" id="Heading">Bu Mesajı Sil</h4>
 									</div>
 									<div class="modal-body">
 
 										<div class="alert alert-danger">
-											<span class="glyphicon glyphicon-warning-sign"></span> Are you
-											sure you want to delete this Record?
+											<span class="glyphicon glyphicon-warning-sign"></span> Silmek istediğinden emin misin?
 										</div>
 
 									</div>
 									<div class="modal-footer ">
 										<button type="button" class="btn btn-success">
-											<span class="glyphicon glyphicon-ok-sign"></span> Yes
+											<span class="glyphicon glyphicon-ok-sign"></span> Evet
 										</button>
 										<button type="button" class="btn btn-default"
 										data-dismiss="modal">
-											<span class="glyphicon glyphicon-remove"></span> No
+											<span class="glyphicon glyphicon-remove"></span> Hayır
 										</button>
 									</div>
 								</div>
@@ -459,43 +416,43 @@
 					</div>
 
 				</div>
-				
-				</div>
-				
-				<div class="row">
-
-				<%= render "footer" %>
-				
-				</div>
 
 			</div>
 
-			<!-- pluginler -->
+			<div class="row">
 
-			<!--  fixed header -->
+				<%= render "footer" %>
 
-			<%= render "headerfixedjs" %>
+			</div>
 
-			<!--  Mesajlar paneli -->
+		</div>
 
-			<script type="text/javascript">
-				$(document).ready(function() {
-					$("#mytable #checkall").click(function() {
-						if ($("#mytable #checkall").is(':checked')) {
-							$("#mytable input[type=checkbox]").each(function() {
-								$(this).prop("checked", true);
-							});
+		<!-- pluginler -->
 
-						} else {
-							$("#mytable input[type=checkbox]").each(function() {
-								$(this).prop("checked", false);
-							});
-						}
-					});
+		<!--  fixed header -->
 
-					$("[data-toggle=tooltip]").tooltip();
+		<%= render "headerfixedjs" %>
+
+		<!--  Mesajlar paneli -->
+
+		<script type="text/javascript">
+			$(document).ready(function() {
+				$("#mytable #checkall").click(function() {
+					if ($("#mytable #checkall").is(':checked')) {
+						$("#mytable input[type=checkbox]").each(function() {
+							$(this).prop("checked", true);
+						});
+
+					} else {
+						$("#mytable input[type=checkbox]").each(function() {
+							$(this).prop("checked", false);
+						});
+					}
 				});
-			</script>
+
+				$("[data-toggle=tooltip]").tooltip();
+			});
+		</script>
 	</body>
 
 </html>
