--- a/app/views/user/member.html.erb
+++ b/app/views/user/member.html.erb
@@ -365,20 +365,12 @@
 											
 											<% @favouriteadverts.each do |advert| %>
 											
-												<% if advert.advertable_type=='Secondhand' %>
-													<% path = '/ikinciel/' %>
-												<% elsif advert.advertable_type=='Lessonnote' %>
-													<% path = '/dersnotu/' %>
-												<% elsif advert.advertable_type=='Homemate' %>
-													<% path = '/evarkadasi/' %>
-												<% elsif advert.advertable_type=='Privatelesson' %>
-													<% path = '/ozelders/' %>
-												<% end %>
+												
 											
 												<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
 
 													<div class="thumbnail">
-														<a title='<%= advert.name %>' href="<%= path %><%= advert.name.parameterize + '-' + advert.id.to_s %>">  <%= image_tag advert.images[0].imagefile(:small) %> </a>
+														<a title='<%= advert.name %>' href="<%= advert.href %>">  <%= image_tag advert.images[0].imagefile(:small) %> </a>
 			
 													</div>
 	
@@ -402,6 +394,53 @@
 									</div>
 
 								</div>
+								
+								
+								<!--  İncelediğim İlanlar kısmı -->
+
+								<div style="display:none; margin-bottom: 10px; margin-left: 10px; margin-right: 10px; " class="panelortak inceledigimilanlar panel panel-info">
+
+									<div class="panel-heading">
+										<h3 class="panel-title">İncelediğim İlanlar</h3>
+									</div>
+
+									<div class="panel-body">
+
+										<div class="row">
+											
+											<% @viewedadverts.each do |advert| %>
+											
+												
+											
+												<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
+
+													<div class="thumbnail">
+														<a title='<%= advert.name %>' href="<%= advert.href %>">  <%= image_tag advert.images[0].imagefile(:small) %> </a>
+			
+													</div>
+	
+													<div class="caption">
+												
+												
+												
+														<h5><% if advert.name.length > 12 %>
+																<%= advert.name[0..9] %>..
+															<% else %>
+																<%= advert.name %>
+															<% end %>
+														</h5>
+			
+													</div>
+	
+												</div>
+											<% end %>
+
+										</div>
+									</div>
+
+								</div>
+								
+								
 
 								<div class="degiskenpanel well">
 
