--- a/app/views/index/mesajlarim.html.erb
+++ b/app/views/index/mesajlarim.html.erb
@@ -183,124 +183,131 @@
 					<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9"
 					style="padding-left: 20px; padding-right: 20px">
 
-						
-						
-						
-						
 						<div class="row">
-							
-							
-						
 
-						<div class="col-md-12">
-							
-							<div class="row">
-							<h4 class="col-md-3">Mesajlarım</h4>
-							
-							<a style="float:right;margin-bottom:20px;" type = "button" data-title="Edit"
-												data-toggle="modal" data-target="#mesajgonder" class = "btn btn-danger">Mesaj Gönder</a>
-							
-							
+							<div class="col-md-12">
+
+								<div class="row">
+									<h4 class="col-md-3">Mesajlarım</h4>
+
+									<a style="float:right;margin-bottom:20px;" type = "button" data-title="Edit"
+									data-toggle="modal" data-target="#mesajgonder" class = "btn btn-danger">Mesaj Gönder</a>
+
+								</div>
+
+								<div class="row table-responsive">
+
+									<table id="mytable" class="table table-bordred table-striped">
+
+										<thead>
+
+											<th>
+											<input type="checkbox" id="checkall" />
+											</th>
+											<th>Ad</th>
+											<th>Soyad</th>
+											<th>Konu</th>
+											<th>Kullanıcı Adı</th>
+											<th>Tarih</th>
+											<th>Cevapla</th>
+											<th>Sil</th>
+
+										</thead>
+										<tbody>
 											
-											
-							
-							</div>
-							
-							
-							
-							<div class="row table-responsive">
-							
-							
-
-								<table id="mytable" class="table table-bordred table-striped">
-
-									<thead>
-
-										<th>
-										<input type="checkbox" id="checkall" />
-										</th>
-										<th>Ad</th>
-										<th>Soyad</th>
-										<th>Konu</th>
-										<th>Kullanıcı Adı</th>
-										<th>Tarih</th>
-										<th>Cevapla</th>
-										<th>Sil</th>
-
-									</thead>
-									<tbody>
-
-										<tr>
 											<% current_user.tos.each do |mesaj| %>
 
-											<td>
-											<input type="checkbox" class="checkthis" />
-											</td>
-											<td><%= mesaj.from.name %></td>
-											<td><%= mesaj.from.surname %></td>
-											<td><%= mesaj.topic %></td>
-											<td><%= mesaj.from.username %></td>
-											<td><%= mesaj.created_at %></td>
-											<td>
-											<p data-placement="top" data-toggle="tooltip"
-											title="Edit">
-												<button class="btn btn-primary btn-xs" data-title="Edit"
-												data-toggle="modal" data-target="#edit">
-													<span class="glyphicon glyphicon-pencil"></span>
-												</button>
-											</p></td>
-											
-											
-											<td>
-											<p data-placement="top" data-toggle="tooltip"
-											title="Delete">
-												<button class="btn btn-danger btn-xs" data-title="Delete"
-												data-toggle="modal" data-target="#delete">
-													<span class="glyphicon glyphicon-trash"></span>
-												</button>
-											</p></td>
+											<tr>
+												
 
+												<td>
+												<input type="checkbox" class="checkthis" />
+												</td>
+												<td><%= mesaj.from.name %></td>
+												<td><%= mesaj.from.surname %></td>
+												<td><%= mesaj.topic %></td>
+												<td><%= mesaj.from.username %></td>
+												<td><%= mesaj.created_at %></td>
+												<td>
+												<p data-placement="top" data-toggle="tooltip"
+												title="Edit">
+													<button class="btn btn-primary btn-xs <%= mesaj.from.username %>" data-title="Edit"
+													data-toggle="modal" data-target="#edit">
+														<span class="glyphicon glyphicon-pencil"></span>
+													</button>
+												</p></td>
+
+												<td>
+												<p data-placement="top" data-toggle="tooltip"
+												title="Delete">
+													<button class="<%= mesaj.from.username %>  btn btn-danger btn-xs" data-title="Delete"
+													data-toggle="modal" data-target="#delete">
+														<span class="glyphicon glyphicon-trash"></span>
+													</button>
+												</p></td>
+
+												<script>
+													$(".<%= mesaj.from.username %>").click(function() {
+														
+														$(".cevaplapaneli .ickisim").attr("placeholder", "<%= mesaj.from.username %>");
+														
+														$(".cevaplapaneli .ickisim").val("<%= mesaj.from.username %>");
+														
+
+														
+													});
+
+												</script>
+
+												
+											</tr>
+											
 											<% end %>
-										</tr>
+											
+											
+											
+											
 
-									</tbody>
+										</tbody>
 
-								</table>
+									</table>
 
-								<div class="clearfix"></div>
-								<ul class="pagination ">
-									<li class="disabled">
-										<a href="#"><span
-										class="glyphicon glyphicon-chevron-left"></span></a>
-									</li>
-									<li class="active">
-										<a href="#">1</a>
-									</li>
-									<li>
-										<a href="#">2</a>
-									</li>
-									<li>
-										<a href="#">3</a>
-									</li>
-									<li>
-										<a href="#">4</a>
-									</li>
-									<li>
-										<a href="#">5</a>
-									</li>
-									<li>
-										<a href="#"><span
-										class="glyphicon glyphicon-chevron-right"></span></a>
-									</li>
-								</ul>
+									<div class="clearfix"></div>
+									<ul class="pagination ">
+										<li class="disabled">
+											<a href="#"><span
+											class="glyphicon glyphicon-chevron-left"></span></a>
+										</li>
+										<li class="active">
+											<a href="#">1</a>
+										</li>
+										<li>
+											<a href="#">2</a>
+										</li>
+										<li>
+											<a href="#">3</a>
+										</li>
+										<li>
+											<a href="#">4</a>
+										</li>
+										<li>
+											<a href="#">5</a>
+										</li>
+										<li>
+											<a href="#"><span
+											class="glyphicon glyphicon-chevron-right"></span></a>
+										</li>
+									</ul>
+
+								</div>
 
 							</div>
 
 						</div>
 						
-						</div>
+						<%= form_for :mesaj, :url => 'mesajcevapla', :method => :post do |m| %>
 
-						<div class="modal fade" id="edit" tabindex="-1" role="dialog"
+						<div class="cevaplapaneli modal fade" id="edit" tabindex="-1" role="dialog"
 						aria-labelledby="edit" aria-hidden="true">
 							<div class="modal-dialog">
 								<div class="modal-content">
@@ -313,26 +320,30 @@
 									</div>
 									<div class="modal-body">
 										<div class="form-group">
-											<input class="form-control " type="text" placeholder="Kullanıcı Adı">
+											<%= m.text_field :username,type: "text",placeholder:"Kullanıcı Adı",class:"form-control kullaniciadi ickisim",readonly: true %>
+											
 										</div>
 										<div class="form-group">
+											
+											<%= m.text_field :topic,type: "text",placeholder: "Konu",class: "form-control" %>
 
-											<input class="form-control " type="text" placeholder="Konu">
+											
 										</div>
 										<div class="form-group">
-											<textarea rows="2" class="form-control"
-											placeholder="Mesaj İçeriği"></textarea>																						
-
-
+											<%= m.text_area :text,rows: "2",class:"form-control",placeholder: "Mesaj İçeriği" %>																																										
 
 
 										</div>
 									</div>
 									<div class="modal-footer ">
-										<button type="button" class="btn btn-warning btn-lg"
-										style="width: 100%;">
-											<span class="glyphicon glyphicon-ok-sign"></span> Cevap Ver
-										</button>
+										
+										<%= m.submit('Cevap Ver',class:"btn btn-warning btn-lg",style: "width: 100%;") do %>
+										
+										<!--  <span class="glyphicon glyphicon-ok-sign"></span> -->
+										
+										<% end %>
+										
+										
 									</div>
 								</div>
 								<!-- /.modal-content -->
@@ -340,6 +351,8 @@
 							<!-- /.modal-dialog -->
 						</div>
 						
+						<% end %>
+
 						<div class="modal fade" id="mesajgonder" tabindex="-1" role="dialog"
 						aria-labelledby="edit" aria-hidden="true">
 							<div class="modal-dialog">
@@ -361,7 +374,9 @@
 										</div>
 										<div class="form-group">
 											<textarea rows="2" class="form-control"
-											placeholder="Mesaj İçeriği..."></textarea>																						
+											placeholder="Mesaj İçeriği..."></textarea>																																												
+
+
 
 
 
