--- a/app/views/advert/kategoriler.html.erb
+++ b/app/views/advert/kategoriler.html.erb
@@ -45,6 +45,13 @@
 		rel='stylesheet' type='text/css'>
 
 		<!-- Fixed Header sonu -->
+		
+		<!-- Arama Kutucuğu-->
+
+		<link href="/resources/css/searchbox.css" rel="stylesheet"
+		type="text/css" />
+
+		<script src="/resources/js/modernizer.js"></script>
 
 		<!-- Cssmenu-3 -->
 
@@ -56,7 +63,33 @@
 		<link rel="stylesheet" href="/resources/plugins/DropDownMenu/css/component.css">
 
 		
-		
+		<!-- Smart Menus plugin -->
+
+		<!-- jQuery import -->
+		<script src="/resources/plugins/smartmenus/libs/jquery/jquery.js"
+		type="text/javascript"></script>
+
+		<script>
+			var smartmenus = jQuery.noConflict();
+		</script>
+
+		<!-- SmartMenus jQuery plugin -->
+		<script src="/resources/plugins/smartmenus/jquery.smartmenus.js"
+		type="text/javascript"></script>
+
+		<!-- SmartMenus core CSS (required) -->
+		<link href="/resources/plugins/smartmenus/css/sm-core-css.css"
+		rel="stylesheet" type="text/css" />
+		<!-- "sm-blue" menu theme (optional, you can use your own CSS, too) -->
+		<link href="/resources/plugins/smartmenus/css/sm-blue/sm-blue.css"
+		rel="stylesheet" type="text/css" />
+
+		<!-- SmartMenus jQuery init -->
+		<script>
+			smartmenus(document).ready(function() {
+				smartmenus('#main-menu').smartmenus();
+			});
+		</script>
 
 		<!-- end of plugins  -->
 
@@ -116,8 +149,17 @@
 				<%= render "headerfixed" %>
 
 			</div>
+			
+			<!-- You need this element to prevent the content of the page from jumping up -->
+			<div class="header-fixed-placeholder"></div>
+			
+			<div class="row">
 
-			<div style="margin-top:10px;"class="row">
+				<%= render "smartmenus" %>
+
+			</div>
+
+			<div style="margin-top:-30px;"class="row">
 
 				<div class="main">
 					<nav id="cbp-hrmenu" class="cbp-hrmenu">
@@ -127,205 +169,125 @@
 								<div class="cbp-hrsub">
 									<div class="cbp-hrsub-inner">
 										<div>
-											<h4>Learning &amp; Games</h4>
+											<h4>A-H</h4>
 											<ul>
 												<li>
-													<a href="#">Catch the Bullet</a>
-												</li>
+													<a href="#">Beyaz Eşya</a>
+												</li>	
+												
 												<li>
-													<a href="#">Snoopydoo</a>
-												</li>
+													<a href="#">Ders Notu</a>
+												</li>	
+												
 												<li>
-													<a href="#">Fallen Angel</a>
-												</li>
+													<a href="#">Elektronik</a>
+												</li>	
+												
 												<li>
-													<a href="#">Sui Maker</a>
-												</li>
+													<a href="#">Ev Dekorasyonu</a>
+												</li>	
+												
 												<li>
-													<a href="#">Wave Master</a>
-												</li>
-												<li>
-													<a href="#">Golf Pro</a>
-												</li>
+													<a href="#">Giyim</a>
+												</li>	
+												
+												
 											</ul>
 										</div>
 										<div>
-											<h4>Utilities</h4>
+											<h4>H-P</h4>
 											<ul>
 												<li>
-													<a href="#">Gadget Finder</a>
-												</li>
+													<a href="#">Kırtasiye</a>
+													
+												</li>	
+												
 												<li>
-													<a href="#">Green Tree Express</a>
-												</li>
+													<a href="#">Mutfak Eşyaları</a>
+													
+												</li>	
+												
 												<li>
-													<a href="#">Green Tree Pro</a>
-												</li>
-												<li>
-													<a href="#">Wobbler 3.0</a>
-												</li>
-												<li>
-													<a href="#">Coolkid</a>
-												</li>
+													<a href="#">Müzik Aletleri</a>
+													
+												</li>	
+												
+												
 											</ul>
 										</div>
 										<div>
-											<h4>Education</h4>
+											<h4>P-Z</h4>
 											<ul>
 												<li>
-													<a href="#">Learn Thai</a>
+													<a href="#">Vasıta</a>
+													
+												</li>	
+													
+												<li>	
+													<a href="#">Diğer</a>
 												</li>
-												<li>
-													<a href="#">Math Genius</a>
-												</li>
-												<li>
-													<a href="#">Chemokid</a>
-												</li>
+												
 											</ul>
-											<h4>Professionals</h4>
-											<ul>
-												<li>
-													<a href="#">Success 1.0</a>
-												</li>
-												<li>
-													<a href="#">Moneymaker</a>
-												</li>
-											</ul>
+											
 										</div>
 									</div><!-- /cbp-hrsub-inner -->
 								</div><!-- /cbp-hrsub -->
 							</li>
 							<li>
 								<a href="#">Ev Arkadaşı</a>
-								<div class="cbp-hrsub">
-									<div class="cbp-hrsub-inner">
-										<div>
-											<h4>Education &amp; Learning</h4>
-											<ul>
-												<li>
-													<a href="#">Learn Thai</a>
-												</li>
-												<li>
-													<a href="#">Math Genius</a>
-												</li>
-												<li>
-													<a href="#">Chemokid</a>
-												</li>
-											</ul>
-											<h4>Professionals</h4>
-											<ul>
-												<li>
-													<a href="#">Success 1.0</a>
-												</li>
-												<li>
-													<a href="#">Moneymaker</a>
-												</li>
-											</ul>
-										</div>
-										<div>
-											<h4>Entertainment</h4>
-											<ul>
-												<li>
-													<a href="#">Gadget Finder</a>
-												</li>
-												<li>
-													<a href="#">Green Tree Express</a>
-												</li>
-												<li>
-													<a href="#">Green Tree Pro</a>
-												</li>
-												<li>
-													<a href="#">Holy Cannoli</a>
-												</li>
-												<li>
-													<a href="#">Wobbler 3.0</a>
-												</li>
-												<li>
-													<a href="#">Coolkid</a>
-												</li>
-											</ul>
-										</div>
-										<div>
-											<h4>Games</h4>
-											<ul>
-												<li>
-													<a href="#">Catch the Bullet</a>
-												</li>
-												<li>
-													<a href="#">Snoopydoo</a>
-												</li>
-												<li>
-													<a href="#">Fallen Angel</a>
-												</li>
-												<li>
-													<a href="#">Sui Maker</a>
-												</li>
-												<li>
-													<a href="#">Wave Master</a>
-												</li>
-												<li>
-													<a href="#">Golf Pro</a>
-												</li>
-											</ul>
-										</div>
-									</div><!-- /cbp-hrsub-inner -->
-								</div><!-- /cbp-hrsub -->
+								
 							</li>
 							<li>
 								<a href="#">Ders Notları</a>
 								<div class="cbp-hrsub">
 									<div class="cbp-hrsub-inner">
 										<div>
-											<h4>Learning &amp; Games</h4>
+											<h4>Temel Bilimler</h4>
 											<ul>
 												<li>
-													<a href="#">Catch the Bullet</a>
+													<a href="#">Matematik</a>
 												</li>
+												
 												<li>
-													<a href="#">Snoopydoo</a>
+													<a href="#">Fizik</a>
 												</li>
+												
+												
+												<li>
+													<a href="#">Kimya</a>
+												</li>
+												
+												
+												<li>
+													<a href="#">Biyoloji</a>
+												</li>
+												
+
+												
 											</ul>
-											<h4>Utilities</h4>
-											<ul>
-												<li>
-													<a href="#">Gadget Finder</a>
-												</li>
-												<li>
-													<a href="#">Green Tree Express</a>
-												</li>
-												<li>
-													<a href="#">Green Tree Pro</a>
-												</li>
-												<li>
-													<a href="#">Wobbler 3.0</a>
-												</li>
-												<li>
-													<a href="#">Coolkid</a>
-												</li>
-											</ul>
-										</div>
+											
+										</div>	
+											
 										<div>
-											<h4>Education</h4>
+											<h4>Mühendislik</h4>
 											<ul>
 												<li>
-													<a href="#">Learn Thai</a>
+													<a href="#">Genel Mühendislik Ders Notları</a>
 												</li>
-												<li>
-													<a href="#">Math Genius</a>
-												</li>
-												<li>
-													<a href="#">Chemokid</a>
-												</li>
+												
 											</ul>
-											<h4>Professionals</h4>
+											
+										</div>
+										
+										<div>
+											<h4>Eğitim Bilimleri</h4>
 											<ul>
 												<li>
-													<a href="#">Success 1.0</a>
+													<a href="#">Genel Eğitim Bilimleri Ders Notları</a>
 												</li>
-												<li>
-													<a href="#">Moneymaker</a>
-												</li>
+												
 											</ul>
+											
 										</div>
 									</div><!-- /cbp-hrsub-inner -->
 								</div><!-- /cbp-hrsub -->
@@ -334,61 +296,58 @@
 								<a href="#">Özel Ders</a>
 								<div class="cbp-hrsub">
 									<div class="cbp-hrsub-inner">
+										
 										<div>
-											<h4>Learning &amp; Games</h4>
+											<h4>Temel Bilimler</h4>
 											<ul>
 												<li>
-													<a href="#">Catch the Bullet</a>
+													<a href="#">Matematik</a>
 												</li>
+												
 												<li>
-													<a href="#">Snoopydoo</a>
+													<a href="#">Fizik</a>
 												</li>
+												
+												
 												<li>
-													<a href="#">Fallen Angel</a>
+													<a href="#">Kimya</a>
 												</li>
+												
+												
 												<li>
-													<a href="#">Sui Maker</a>
+													<a href="#">Biyoloji</a>
 												</li>
-												<li>
-													<a href="#">Wave Master</a>
-												</li>
-												<li>
-													<a href="#">Golf Pro</a>
-												</li>
+												
+
+												
 											</ul>
-											<h4>Utilities</h4>
-											<ul>
-												<li>
-													<a href="#">Gadget Finder</a>
-												</li>
-												<li>
-													<a href="#">Green Tree Express</a>
-												</li>
-											</ul>
-										</div>
+											
+										</div>	
+											
 										<div>
-											<h4>Entertainment</h4>
+											<h4>Mühendislik</h4>
 											<ul>
 												<li>
-													<a href="#">Gadget Finder</a>
+													<a href="#">Genel Mühendislik Özel Ders İlanları</a>
 												</li>
-												<li>
-													<a href="#">Green Tree Express</a>
-												</li>
-												<li>
-													<a href="#">Green Tree Pro</a>
-												</li>
-												<li>
-													<a href="#">Holy Cannoli</a>
-												</li>
-												<li>
-													<a href="#">Wobbler 3.0</a>
-												</li>
-												<li>
-													<a href="#">Coolkid</a>
-												</li>
+												
 											</ul>
+											
 										</div>
+										
+										<div>
+											<h4>Eğitim Bilimleri</h4>
+											<ul>
+												<li>
+													<a href="#">Genel Eğitim Bilimleri Özel Ders İlanları</a>
+												</li>
+												
+											</ul>
+											
+										</div>
+										
+										
+										
 									</div><!-- /cbp-hrsub-inner -->
 								</div><!-- /cbp-hrsub -->
 							</li>
